appId: com.trymuxr.app
---
- tapOn: "Runbook"
- extendedWaitUntil:
    visible: "Git status"
    timeout: 25000
- waitForAnimationToEnd:
    timeout: 3000
- tapOn: "Git status"
- extendedWaitUntil:
    visible: "Run it"
    timeout: 20000
- waitForAnimationToEnd:
    timeout: 2000
- tapOn: "Run it"
- waitForAnimationToEnd:
    timeout: 12000
